# oxide_admin

./: .dockerignore  .env.example  .gitignore  CHECKLIST.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.ci  LICENSE-MIT  README.md  README_ZH_CN.md  docker-compose.yaml  justfile
app/adapter/: Cargo.toml  askama.toml  build.rs  frontend.rs  lib.rs  upload.rs
app/adapter/api/: auth.rs  authn.rs  mod.rs  option.rs  profile.rs  role.rs  system.rs  upload.rs  user.rs
app/adapter/api/auth/: mod.rs
app/adapter/api/organization/: department.rs  mod.rs  role.rs  user.rs
app/adapter/api/system/: access_log.rs  bgworker.rs  cache.rs  department.rs  file.rs  mod.rs  option.rs  profile.rs  role.rs  sched.rs  stat.rs  user.rs
app/adapter/i18n/: mod.rs
app/adapter/i18n/en-US/: auth.ftl  main.ftl  menu.ftl  organization.ftl  permission.ftl  role.ftl  system.ftl  user.ftl
app/adapter/i18n/zh-CN/: auth.ftl  main.ftl  menu.ftl  organization.ftl  permission.ftl  role.ftl  system.ftl  user.ftl
app/adapter/shared/: constant.rs  error.rs  mod.rs  response.rs  state.rs
app/adapter/shared/extractor/: accept_language.rs  inject.rs  mod.rs  valid_user.rs
app/adapter/shared/middleware/: access_log.rs  api_error.rs  common.rs  mod.rs  perm_router_ext.rs  rate_limit_ext.rs  user_authn_required.rs
app/adapter/shared/translation/: mod.rs
app/application/: Cargo.toml  build.rs  error.rs  lib.rs  re_export.rs
app/application/auth/: mod.rs
app/application/auth/command/: mod.rs  refresh_captcha.rs  refresh_token.rs  sign_in.rs  sign_out.rs
app/application/auth/service/: auth_service.rs
app/application/iam/command/: batch_delete_roles.rs  batch_delete_users.rs  batch_disable_roles.rs  batch_disable_users.rs  batch_enable_roles.rs  batch_enable_users.rs  create_role.rs  create_user.rs  mod.rs  refresh_captcha.rs  refresh_token.rs  sign_in.rs  sign_out.rs  update_role.rs  update_user.rs  update_user_password.rs  update_user_self_password.rs
app/application/iam/dto/: role.rs  user.rs
app/application/iam/query/: option_roles.rs  retrieve_role.rs  retrieve_user.rs  search_roles.rs  search_users.rs
app/application/iam/service/: iam_service.rs  menu.rs  mod.rs  page.rs  permission.rs  role_service.rs  user_service.rs
app/application/organization/: mod.rs
app/application/organization/command/: batch_delete_departments.rs  batch_delete_roles.rs  batch_delete_users.rs  batch_disable_roles.rs  batch_disable_users.rs  batch_enable_roles.rs  batch_enable_users.rs  create_department.rs  create_role.rs  create_user.rs  mod.rs  refresh_captcha.rs  refresh_token.rs  sign_in.rs  sign_out.rs  update_department.rs  update_role.rs  update_user.rs  update_user_password.rs  update_user_self_password.rs
app/application/organization/dto/: department.rs  mod.rs  role.rs  user.rs
app/application/organization/query/: mod.rs  option_roles.rs  retrieve_department.rs  retrieve_role.rs  retrieve_user.rs  search_departments.rs  search_roles.rs  search_users.rs  tree_departments.rs
app/application/organization/service/: iam_service.rs  mod.rs
app/application/shared/: cache_provider.rs  cache_type.rs  command_handler.rs  dto.rs  event.rs  mod.rs  paging_query.rs  paging_result.rs  query_handler.rs
app/application/shared/background_job/: mod.rs  (+11 more)
app/domain/: Cargo.toml  build.rs  lib.rs
app/domain/auth/: error.rs  event.rs  menus.yaml  mod.rs  permissions.yaml
app/domain/iam/: error.rs  event.rs  mod.rs  permissions.yaml
app/domain/organization/: error.rs  event.rs
app/domain/shared/: domain_repository.rs  event_util.rs  id_generator.rs  mod.rs  to_inner_vec.rs  token_issuer.rs
app/domain/system/: error.rs  event.rs  menus.yaml  mod.rs  permissions.yaml
app/infrastructure/: Cargo.toml  build.rs  error.rs  lib.rs  test.rs  test_utils.rs
app/infrastructure/implementation/: captcha_issuer_impl.rs  mod.rs  permission_resolver_impl.rs  token_issuer_impl.rs  token_store_impl.rs
app/infrastructure/migration/: migrator.rs  mod.rs
app/infrastructure/port/: captcha_issuer_impl.rs  menu_resolver_impl.rs  mod.rs  permission_resolver_impl.rs  redb_kv_impl.rs  redis_kv_impl.rs  sched_receiver_impl.rs  token_issuer_impl.rs  token_store_impl.rs
app/infrastructure/repository/: mod.rs
app/infrastructure/shared/: chrono_tz.rs  cloneable_error.rs  config.rs  error_util.rs  event_bus.rs  feature_flag.rs  hmac_util.rs  kv.rs  mod.rs  path.rs  pg_pool.rs  pool.rs  provider.rs  serde_util.rs  sqlite_pool.rs  workspace.rs
crates/background_job/: Cargo.toml  lib.rs  redis.rs  sqlite.rs
crates/bg_worker/: Cargo.toml  error.rs  lib.rs  queuer.rs  worker_manager.rs
crates/bg_worker/dummy/: queuer.rs  worker_manager.rs
crates/bg_worker/faktory/: queuer.rs  worker_manager.rs
crates/bg_worker/sqlite/: queuer.rs  worker_manager.rs
crates/bg_worker_kit/: Cargo.toml  error.rs  lib.rs  sqlite_helper.rs
crates/bg_worker_kit/dummy/: queuer.rs
crates/bg_worker_kit/faktory/: mod.rs  queuer.rs  worker_manager.rs
crates/bg_worker_kit/sqlite/: helper.rs  mod.rs  queuer.rs  worker_manager.rs
crates/cache_kit/: Cargo.toml  error.rs  lib.rs  moka.rs  redis.rs
crates/captcha_generator/: Cargo.toml  math.rs
crates/captcha_kit/: Cargo.toml  error.rs  lib.rs  math.rs
crates/faktory_bg/: Cargo.toml  error.rs  lib.rs  main.rs  publisher.rs  queuer.rs  worker.rs  worker_manager.rs
crates/flag_kit/: Cargo.toml  error.rs  flipt.rs  lib.rs
crates/http_client_kit/: Cargo.toml  lib.rs
crates/kvdb/: Cargo.toml  lib.rs  redb.rs  redis.rs
crates/kvdb_kit/: Cargo.toml  error.rs  lib.rs  redb.rs  redis.rs  serde_util.rs
crates/migrate_kit/: Cargo.toml  error.rs  lib.rs  migrator.rs
crates/object_storage/: Cargo.toml  fs.rs  lib.rs  s3.rs
crates/object_storage_kit/: Cargo.toml  error.rs  fs.rs  lib.rs  s3.rs
crates/sched_kit/: Cargo.toml  cron_tab.rs  error.rs  lib.rs  tokio_cron.rs
crates/tencent_location_kit/: Cargo.toml  geocoder.rs  lib.rs
crates/trace_kit/: Cargo.toml  lib.rs
crates/wukongim_kit/: Cargo.toml  error.rs  lib.rs  manager.rs
crates/wukongim_kit/response/: common.rs  user.rs
(+317 files in other folders)
