[package]
name = "oxide_admin"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "app/adapter",
    "app/application",
    "app/domain",
    "app/infrastructure",
    "bin/server",
    "bin/xtask",
    "crates/bg_worker_kit",
    "crates/captcha_kit",
    "crates/flag_kit",
    "crates/kvdb_kit",
    "crates/object_storage_kit",
    "crates/sched_kit",
    "crates/single_flight",
    "crates/single_flight_macros",
    "crates/trace_kit",
]

[workspace.dependencies]
adapter = { path = "app/adapter" }
anyhow = { version = "1", default-features = false }
application = { path = "app/application" }
argon2 = { version = "0.5", default-features = false }
axum = { version = "0.8", default-features = false }
axum-tracing-opentelemetry = { version = "0.30", default-features = false }
axum_typed_multipart = { version = "0.16", default-features = false }

bb8-redis = { version = "0.24", default-features = false }
bg_worker_kit = { path = "crates/bg_worker_kit" }
bon = { version = "3.7", default-features = false }
captcha_kit = { path = "crates/captcha_kit" }
chrono = { version = "0.4", default-features = false }
chrono-tz = { version = "0.10", default-features = false }
clap = { version = "4.5", default-features = false }
cruet = { version = "0.15", default-features = false }
domain = { path = "app/domain" }
dotenvy = { version = "0.15", default-features = false }
flag_kit = { path = "crates/flag_kit" }
futures-util = { version = "0.3", default-features = false }
governor = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false }
hmac-sha256 = { version = "1.1", default-features = false }
humantime = { version = "2.3", default-features = false }
image = { version = "0.25", default-features = false }
imageformat = { version = "0.3", default-features = false }
include_dir = { version = "0.7", default-features = false }
infrastructure = { path = "app/infrastructure" }
jsonwebtoken = { version = "10.0", default-features = false }
kvdb_kit = { path = "crates/kvdb_kit" }
mimalloc = { version = "0.1", default-features = false }
mime_guess = { version = "2.0", default-features = false }
minijinja = { version = "2.11", default-features = false }
nject = { version = "0.4", default-features = false }
object_storage_kit = { path = "crates/object_storage_kit" }
open-feature = { version = "0.2", default-features = false }
paste = { version = "1.0", default-features = false }
quote = { version = "1.0" }
readonly = { version = "0.2", default-features = false }

redb = { version = "3", default-features = false }
rmp-serde = { version = "1.3", default-features = false }

rstest = { version = "0.26", default-features = false }
sched_kit = { path = "crates/sched_kit" }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
serde_urlencoded = { version = "0.7", default-features = false }
serde_with = { version = "3", default-features = false }
single_flight = { path = "crates/single_flight" }
single_flight_macros = { path = "crates/single_flight_macros" }
singleflight-async = { version = "0.2", default-features = false }
sqlx = { version = "0.8", default-features = false }

syn = { version = "2.0" }
sysinfo = { version = "0.37", default-features = false }
tempfile = { version = "3", default-features = false }
tempoid = { version = "0.1", default-features = false }

testcontainers = { version = "0.25", default-features = false }
testcontainers-modules = { version = "0.13", default-features = false }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false }
tokio-cron-scheduler = { version = "0.15", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false }
tower_governor = { version = "0.8", default-features = false }
trace_kit = { path = "crates/trace_kit" }
tracing = { version = "0.1", default-features = false }
tracing-test = { version = "0.2", default-features = false }
twox-hash = { version = "2.1", default-features = false }

utoipa = { version = "5.4", default-features = false }
utoipa-axum = { version = "0.2", default-features = false }
utoipa-scalar = { version = "0.3", default-features = false }

[profile.dev]
debug = "line-tables-only"   # Generate debugging information for easy debugging
split-debuginfo = "unpacked" # Accelerate Compilation Speed on MacOS
opt-level = 0                # Do not perform any optimization, compile quickly
incremental = true           # Enable incremental compilation to accelerate the compilation process
overflow-checks = true       # Enable overflow check for easy debugging
panic = "unwind"             # Retain stack information during panic for easier debugging
codegen-units = 16           # Multi-unit code generation, accelerates compilation (Note: Too much may reduce optimization effects)
lto = "off"                  # Disable global optimization, reduce compile time
strip = false                # Keep the symbol table for debugging convenience

[profile.dev.package."*"]
opt-level = 0

[profile.release]
debug = 0                   # Do not generate debug information, reduce size
rpath = false               # Do not generate runtime library path
incremental = false         # Disable incremental compilation, release does not require
overflow-checks = false     # Disable overflow check, better performance
panic = "abort"             # panic immediately terminate, save code size
codegen-units = 1           # Longer compilation time for better optimization
lto = "fat"                 # Cross-crate global optimization, excellent performance
opt-level = 3               # Highest Performance Optimization
strip = true                # Remove symbol table, minimum volume
