[package]
name = "adapter"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[features]
trace_otlp = ["dep:axum-tracing-opentelemetry"]

[dependencies]
anyhow = { workspace = true }
application = { workspace = true }
axum = { workspace = true, features = ["http1", "tokio", "json", "query"] }
axum-tracing-opentelemetry = { workspace = true, optional = true }
axum_typed_multipart = { workspace = true, features = ["tempfile_3"] }
domain = { workspace = true }
governor = { workspace = true }
include_dir = { workspace = true }
mime_guess = { workspace = true }
nject = { workspace = true, features = ["macro"] }
serde = { workspace = true, features = ["derive"] }
serde_urlencoded = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
tower_governor = { workspace = true, features = ["axum", "tracing"] }
tracing = { workspace = true }
