[package]
name = "adapter"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[features]
trace_otlp = ["dep:axum-tracing-opentelemetry"]
openapi = []

[dependencies]
accept-language = { workspace = true }
application = { workspace = true }
axum = { workspace = true, features = [
    "http1",
    "tokio",
    "json",
    "query",
    "macros",
] }
axum-extra = { workspace = true, features = ["cookie"] }
axum-tracing-opentelemetry = { workspace = true, optional = true }
axum_typed_multipart = { workspace = true, features = ["tempfile_3"] }
bon = { workspace = true }
askama = { workspace = true, features = ["default"] }
domain = { workspace = true }
futures-util = { workspace = true }
governor = { workspace = true }
i18n = { workspace = true }
include_dir = { workspace = true }
mime_guess = { workspace = true }
nject = { workspace = true, features = ["macro"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
serde_urlencoded = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
tower_governor = { workspace = true, features = ["axum", "tracing"] }
tracing = { workspace = true }

utoipa = { workspace = true, features = ["macros", "chrono", "axum_extras"] }
utoipa-axum = { workspace = true }
utoipa-scalar = { workspace = true, features = ["axum"] }
