[package]
name = "application"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bg_worker_kit = { workspace = true }
bon = { workspace = true }
domain = { workspace = true }
futures-util = { workspace = true }
image = { workspace = true, features = ["png", "webp", "jpeg"] }
imageformat = { workspace = true }
infrastructure = { workspace = true }
kvdb_kit = { workspace = true }
nject = { workspace = true, features = ["macro"] }
object_storage_kit = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["alloc", "macros", "chrono_0_4"] }
single_flight = { workspace = true }

sqlx = { workspace = true }
sysinfo = { workspace = true, features = ["system"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
twox-hash = { workspace = true, features = ["xxhash64"] }

[build-dependencies]
anyhow = { workspace = true }
cruet = { workspace = true }
minijinja = { workspace = true, features = ["serde", "loader", "builtins"] }
serde = { workspace = true, features = ["derive"] }
