[package]
name = "application"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
axum = { workspace = true }
bg_worker_kit = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true }
domain = { workspace = true }
event_kit = { workspace = true }
futures-util = { workspace = true }
image = { workspace = true, features = ["png", "webp", "jpeg"] }
imageformat = { workspace = true }
infrastructure = { workspace = true }
kvdb_kit = { workspace = true }
cache_kit = { workspace = true }
nject = { workspace = true, features = ["macro"] }
object_storage_kit = { workspace = true }
sched_kit = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
serde_with = { workspace = true, features = ["alloc", "macros", "chrono_0_4"] }
single_flight = { workspace = true }

sqlx = { workspace = true }
sysinfo = { workspace = true, features = ["system"] }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
twox-hash = { workspace = true, features = ["xxhash64"] }
utoipa = { workspace = true }

[build-dependencies]
cruet = { workspace = true }
minijinja = { workspace = true, features = ["serde", "loader", "builtins"] }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
filetime = { version = "0.2", default-features = false }
infrastructure = { workspace = true, features = ["test"] }
