[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tempoid = { workspace = true }
bon = { workspace = true }
readonly = { workspace = true }
argon2 = { workspace = true, features = ["std"] }
sqlx = { workspace = true }
