[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
argon2 = { workspace = true, features = ["std"] }
bon = { workspace = true }
readonly = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true }
tempoid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
