[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
argon2 = { workspace = true, features = ["std"] }
bon = { workspace = true }
readonly = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["macros", "chrono"] }
tempoid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true, features = ["macros"] }

[build-dependencies]
cruet = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { version = "0.9.34-deprecated", default-features = false }
