[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[features]
kv_redb = ["kvdb_kit/redb"]
kv_redis = ["kvdb_kit/redis"]
bg_faktory = ["bg_worker_kit/faktory"]
bg_faktory_tls = ["bg_worker_kit/faktory_tls"]
bg_sqlite = ["bg_worker_kit/sqlite"]
object_storage_fs = ["object_storage_kit/fs"]
object_storage_s3 = ["object_storage_kit/s3"]
object_storage_s3_tls = ["object_storage_kit/s3_tls"]
trace_rolling = []
trace_otlp = []
flag_flipt = ["flag_kit/flipt"]
test = [
    "dep:rstest",
    "dep:testcontainers",
    "dep:testcontainers-modules",
    "captcha_kit/test",
]

[dependencies]
bg_worker_kit = { workspace = true }
bon = { workspace = true }
captcha_kit = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true, features = ["std"] }

domain = { workspace = true }
flag_kit = { workspace = true }
include_dir = { workspace = true }
jsonwebtoken = { workspace = true, features = ["rust_crypto"] }
kvdb_kit = { workspace = true }
migrate_kit = { workspace = true }
nject = { workspace = true, features = ["macro"] }
object_storage_kit = { workspace = true }
open-feature = { workspace = true }
readonly = { workspace = true }
rstest = { workspace = true, optional = true }
sched_kit = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
single_flight = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
    "json",
    "derive",
] }
tempfile = { workspace = true }
tempoid = { workspace = true }
testcontainers = { workspace = true, optional = true }
testcontainers-modules = { workspace = true, features = [
    "postgres",
    "redis",
], optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
