[package]
name = "background_job"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
anyhow = { workspace = true }
apalis = { version = "0.7", default-features = false, features = [
    "limit",
    "tracing",
    "retry",
] }
apalis-core = { version = "0.7", default-features = false }
apalis-cron = { version = "0.7", default-features = false }
apalis-sql = { version = "0.7", default-features = false, features = [
    "sqlite",
    "migrate",
    "tokio",
] }
# apalis-redis = { version = "0.7", default-features = false, features = [
#     "tokio",
# ] }
english-to-cron = { version = "0.1", default-features = false }
serde = { workspace = true, default-features = false, features = ["derive"] }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
