[package]
name = "bg_worker_kit"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[features]
faktory = ["dep:faktory"]
faktory_tls = ["faktory/rustls"]
sqlite = ["dep:sqlx"]

[dependencies]
async-trait = { version = "0.1", default-features = false }
faktory = { version = "0.13", default-features = false, optional = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "sqlite",
    "derive",
    "migrate",
], optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
