[package]
name = "bg_worker_kit"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[features]
default = ["sqlite"]
sqlite = ["dep:sqlx", "dep:apalis", "dep:apalis-core", "dep:apalis-sql"]

[dependencies]

apalis = { version = "0.7", default-features = false, features = [
    "limit",
    "tracing",
    "retry",
], optional = true }
apalis-core = { version = "0.7", default-features = false, optional = true }
apalis-sql = { version = "0.7", default-features = false, features = [
    "migrate",
    "postgres",
    "sqlite",
], optional = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "derive",
    "migrate",
], optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
