[package]
name = "bg_worker_kit"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[features]
sqlite = ["apalis-sql/sqlite"]
postgres = ["apalis-sql/postgres"]

[dependencies]

apalis = { version = "0.7", default-features = false, features = [
    "limit",
    "tracing",
    "retry",
] }
apalis-core = { version = "0.7", default-features = false }
apalis-sql = { version = "0.7", default-features = false, features = [
    "migrate",
] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
sqlx = { workspace = true, features = ["runtime-tokio", "derive", "migrate"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
