[package]
name = "cache_kit"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[features]
default = ["moka"]
moka = ["dep:moka"]

[dependencies]
chrono = { workspace = true }
minicbor-serde = { workspace = true, features = ["alloc"] }
moka = { version = "0.12", default-features = false, features = [
    "future",
], optional = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
