[package]
name = "cache_kit"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[features]
default = ["moka", "redis"]
moka = ["dep:moka"]
redis = ["dep:bb8-redis"]

[dependencies]
chrono = { workspace = true }
minicbor-serde = { workspace = true, features = ["alloc"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
moka = { version = "0.12", default-features = false, features = [
    "future",
], optional = true }
bb8-redis = { workspace = true, optional = true }
