[package]
name = "cache_kit"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[features]
moka = ["dep:moka"]
redis = ["dep:bb8-redis"]

[dependencies]
bb8-redis = { workspace = true, optional = true }
chrono = { workspace = true }
cache_kit_macros = { workspace = true }
minicbor-serde = { workspace = true, features = ["alloc"] }
moka = { version = "0.12", default-features = false, features = [
    "future",
], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
