[package]
name = "captcha_generator"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
anyhow = { workspace = true }
image = { workspace = true, features = ["png"] }
ab_glyph = { version = "0.2", default-features = false, features = ["std"] }
imageproc = { version = "0.25", default-features = false }
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }
