[package]
name = "captcha_kit"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
ab_glyph = { version = "0.2", default-features = false, features = ["std"] }
anyhow = { workspace = true }
image = { workspace = true, features = ["png"] }
imageproc = { version = "0.25", default-features = false }
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }
