[package]
name = "faktory_bg"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "main.rs"
name = "faktory_bg"

[lib]
path = "lib.rs"

[dependencies]
faktory = { version = "0.13", default-features = false }
async-trait = { version = "0.1", default-features = false }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
