[package]
name = "flag_kit"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[features]
flipt = ["dep:flipt", "dep:reqwest", "dep:serde_json"]

[dependencies]
anyhow = { workspace = true }
flipt = { git = "https://github.com/flipt-io/flipt-server-sdks", branch = "main", default-features = false, optional = true }
open-feature = { workspace = true, features = ["default"] }
reqwest = { version = "0.12", default-features = false, optional = true }
serde_json = { workspace = true, features = ["std"], optional = true }
