[package]
name = "kvdb"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[features]
default = ["redb"]
redb = ["dep:redb"]
redis = ["dep:bb8-redis"]

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
rmp-serde = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bb8-redis = { workspace = true, optional = true }
redb = { workspace = true, optional = true }
