[package]
name = "kvdb"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[features]
redb = ["dep:redb", "dep:tokio", "dep:tokio-cron-scheduler"]
redis = ["dep:bb8-redis"]

[dependencies]
anyhow = { workspace = true }
bb8-redis = { workspace = true, optional = true }
bon = { workspace = true }
chrono = { workspace = true }
redb = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
tokio-cron-scheduler = { workspace = true, optional = true }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
