[package]
name = "kvdb_kit"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[features]
redb = ["dep:redb", "dep:tokio", "dep:cron_tab"]
redis = ["dep:bb8-redis"]

[dependencies]
bb8-redis = { workspace = true, optional = true }
bon = { workspace = true }
chrono = { workspace = true }
cron_tab = { workspace = true, optional = true }
minicbor-serde = { workspace = true, features = ["alloc"] }
redb = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"], optional = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
