[package]
name = "migrate_kit"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
bon = { workspace = true }
migrate_kit_macros = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "derive", "runtime-tokio"] }
thiserror = { workspace = true }
tracing = { workspace = true }
