[package]
name = "object_storage"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[features]
fs = ["opendal/services-fs"]
s3 = ["opendal/services-s3"]

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
hmac-sha256 = { workspace = true }
opendal = { version = "0.54", default-features = false, features = [
    "executors-tokio",
] }
serde = { workspace = true, features = ["derive"] }
serde_urlencoded = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
